master: add image to Browser Tab, add meta tags; Index: centered/crop bg-image; stylesHome: css update; User_addedit: align password row; Profile: aline password row; login_success: validated required changes; not_logged_in: fixed;

--- a/styles/stylesHome.css
+++ b/styles/stylesHome.css
@@ -1,8 +1,8 @@
 /* Styles for index page start */
 #homeBg {
+    background: url("/images/homePgYellowBg4.jpg");
     background-position: center;
     background-size: cover;
-    background: url("/images/homePgYellowBg.jpg");
     height: 83vh;
     width: 100vw;
     /* center vertical & horizontal*/
@@ -18,4 +18,15 @@
     margin: auto;
     text-align: center;
     width: 100vw;
+}
+
+div.container-fluid {
+    border-top: 10px solid white;
+    border-bottom: 10px solid white;
+    width: 100%;
+}
+
+.title {
+    margin-top: 80px;
+    position: relative;
 }
